minor list fix